...
                                    name={isRecording ? 'stop' : 'videocam'}
                                    size={40}
                                    color="#fff"
                                />
                            </TouchableOpacity>
                            <AccessibleText weight="bold" className="text-white mt-2">
                                {isRecording ? 'Detener' : 'Grabar'}
                            </AccessibleText>
                        </View>
                    </View>
                </CameraView>
            </View>
        </ScreenWrapper>
...
